post alpha test hotfix

--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="div-block-4">
       <a href="#" id="submit" class="button-9 w-button">Continue to checkout</a>
-      <a href="#" class="button-9 w-button">Back to shopping</a>
+      <a href="http://127.0.0.1:1337/cart/checkout" class="button-9 w-button">Back to shopping</a>
       
     </div>
   </div>
