--- a/public/checkout/index.html
+++ b/public/checkout/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Aug 08 2021 20:16:05 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Aug 10 2021 08:58:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="610ef3c65b0339b9e1fc52ac" data-wf-site="610ef3c65b03392322fc52ab">
 <head>
   <meta charset="utf-8">
@@ -9,6 +9,8 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/espacebot-info-form-3d73ef.webflow.css" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Tajawal:200,300,regular,500,700,800,900:arabic,latin"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -16,22 +18,46 @@
 </head>
 <body class="body">
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" data-name="Email Form" class="form"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label>Phone Number</label><input type="number" class="w-input" maxlength="256" name="field" data-name="Field" placeholder="Example Text" id="field" required=""><label>Select Country</label><select id="field-2" name="field-2" class="w-select">
-        <option value="">Select one...</option>
-        <option value="First">First Choice</option>
-        <option value="Second">Second Choice</option>
-        <option value="Third">Third Choice</option>
-      </select><label>Select Governorate</label><select id="field-3" name="field-3" required="" class="w-select">
-        <option value="">Select one...</option>
-        <option value="First">First Choice</option>
-        <option value="Second">Second Choice</option>
-        <option value="Third">Third Choice</option>
-      </select><label>Address</label><input type="text" class="w-input" maxlength="256" name="field-4" data-name="Field 4" placeholder="Example Text" id="field-4" required=""><input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
-    <div class="w-form-done">
-      <div>Thank you! Your submission has been received!</div>
+    <form id="email-form" name="email-form" data-name="Email Form" class="form"><label>الاسم</label><input type="text" class="text-field-2 w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"><label for="email" class="field-label-3">البريد الاكتروني</label><input type="email" class="text-field-3 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label>رقم الهاتف</label><input type="tel" class="text-field-4 w-input" maxlength="256" name="field" data-name="Field" id="field" required=""><label>اختر البلد</label><select id="field-2" name="field-2" required="" class="select-field w-select">
+        <option value="egypt">مصر</option>
+        <option value="tunisia">تونس</option>
+      </select><label>اختر المحافظة</label><select id="field-3" name="field-3" required="" class="select-field-2 w-select">
+        <option value="Alexandria">الاسكندرية</option>
+        <option value="Ash Sharqia">الشرقية</option>
+        <option value="Aswan">أسوان</option>
+        <option value="Beheira">البحيرة</option>
+        <option value="Beni Suef">بنى سويف</option>
+        <option value="Cairo">القاهرة</option>
+        <option value="Dakahlia">دقهلية</option>
+        <option value="Damietta">دمياط</option>
+        <option value="Faiyum">فيوم</option>
+        <option value="Gharbia">غربية</option>
+        <option value="Giza">جيزة</option>
+        <option value="Ismailia">اسماعلية</option>
+        <option value="Kafr El Sheikh">كفر الشيخ</option>
+        <option value="Luxor">الأقصر</option>
+        <option value="Matrouh">مطروح</option>
+        <option value="Menofia">منوفية</option>
+        <option value="Minya">المنيا</option>
+        <option value="New Valley">الوادي الجديد</option>
+        <option value="North Sinai">شمال سنياء</option>
+        <option value="Port Said">بور سعيد</option>
+        <option value="Qalyubia">قليوبية</option>
+        <option value="Qena">قنا</option>
+        <option value="Red Sea">البحر الأحمر</option>
+        <option value="Sohag">سوهاج</option>
+        <option value="South Sinai">جنوب سنياء</option>
+        <option value=" Suez">سويس</option>
+      </select><label class="field-label">العنوان</label><input type="text" class="text-field w-input" maxlength="256" name="field-4" data-name="Field 4" placeholder="العنوان بالتفاصيل" id="field-4" required="">
+      <div class="div-block"><label>طريقة الدفع</label><label class="w-radio"><input type="radio" data-name="Radio" id="radio" name="radio" value="Radio" class="w-form-formradioinput radio-button w-radio-input"><span class="w-form-label">الدفع عند الإستلام</span></label><label class="w-radio"><input type="radio" data-name="Radio" id="radio-2" name="Radio" value="Radio 2" class="w-form-formradioinput radio-button-2 w-radio-input"><span class="w-form-label">Credit/Debit card</span></label></div><input type="submit" value="اتمام الطلب" data-wait="Please wait..." class="submit-button w-button">
+    </form>
+    <div class="success-message w-form-done">
+      <div class="div-block-2">
+        <div class="text-block">شكرا لك!!<br>لقد تم الطلب بنجاح</div><img src="images/success.svg" loading="lazy" width="200" height="200" alt="success image" class="image">
+      </div>
     </div>
-    <div class="w-form-fail">
-      <div>Oops! Something went wrong while submitting the form.</div>
+    <div class="error-message w-form-fail">
+      <div class="text-block-2">الرجاء تصحيح الخطأ</div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=610ef3c65b03392322fc52ab" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
