--- a/public/view-cart.webflow (2)/index.html
+++ b/public/view-cart.webflow (2)/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Aug 10 2021 06:49:25 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Aug 10 2021 05:32:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61028f51638efd5a5dafe3e0" data-wf-site="61028f51638efd4154afe3df">
 <head>
   <meta charset="utf-8">
@@ -15,35 +15,29 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body class="body">
   <div>
     <div class="div-block-5">
       <ul role="list" class="list">
-        <!--
         <li class="list-item"><img src="images/untitled.jpg" loading="lazy" alt="" class="image-2">
-          <p class="paragraph">اسم العنصر</p>
+          <p class="paragraph">Item Title</p>
           <p class="paragraph-2">150 LE</p>
           <h5 class="heading-8">1</h5>
           <a href="#" class="button-5 w-button">-</a>
           <a href="#" class="button-6 w-button">+</a>
           <a href="#" class="button-7 w-button"></a>
-          <div class="div-block-6"></div>
         </li>
-        -->
       </ul>
-    </div>
-    <div>
-      <h4 class="heading-9">اجمالي: 150 LE</h4>
+      <div class="div-block-6"></div>
     </div>
     <div class="div-block-4">
-      <a href="/checkout" id="submit" class="button-9 w-button">متابعة</a>
-      <a href="#" class="button-9 w-button">رجوع</a>
+      <a href="#" class="button-9 w-button">Continue to checkout</a>
+      <a href="#" class="button-9 w-button">Back to shopping</a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61028f51638efd4154afe3df" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/script.js" type="text/javascript"></script>
+  <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
