--- a/public/checkout/index.html
+++ b/public/checkout/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Aug 10 2021 08:58:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Aug 14 2021 22:30:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="610ef3c65b0339b9e1fc52ac" data-wf-site="610ef3c65b03392322fc52ab">
 <head>
   <meta charset="utf-8">
@@ -13,15 +13,23 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Tajawal:200,300,regular,500,700,800,900:arabic,latin"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/espaceboticon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/espaceboticon.png" rel="apple-touch-icon">
 </head>
 <body class="body">
   <div class="form-block w-form">
-    <form id="email-form" name="email-form" data-name="Email Form" class="form"><label>الاسم</label><input type="text" class="text-field-2 w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"><label for="email" class="field-label-3">البريد الاكتروني</label><input type="email" class="text-field-3 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><label>رقم الهاتف</label><input type="tel" class="text-field-4 w-input" maxlength="256" name="field" data-name="Field" id="field" required=""><label>اختر البلد</label><select id="field-2" name="field-2" required="" class="select-field w-select">
+    <form id="myform" name="email-form" data-name="Email Form" redirect="/success" data-redirect="/success" method="post" class="form">
+      <label class="field-label-8">الاسم</label>
+      <input type="text" class="text-field-2 w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name" required>
+      <label for="email" class="field-label-3">البريد الاكتروني</label>
+      <input type="email" class="text-field-3 w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required="">
+      <label class="field-label-4">رقم الهاتف</label>
+      <input type="tel" class="text-field-4 w-input" maxlength="256" name="field" data-name="Field" pattern="^01[0125][0-9]{8}$" id="phone_number" required="">
+      <label class="field-label-5">العنوان</label><select id="country" name="field-2" required="" class="select-field w-select">
         <option value="egypt">مصر</option>
         <option value="tunisia">تونس</option>
-      </select><label>اختر المحافظة</label><select id="field-3" name="field-3" required="" class="select-field-2 w-select">
+      </select>
+      <select id="province" name="field-3" required="" class="select-field-2 w-select">
         <option value="Alexandria">الاسكندرية</option>
         <option value="Ash Sharqia">الشرقية</option>
         <option value="Aswan">أسوان</option>
@@ -48,20 +56,44 @@
         <option value="Sohag">سوهاج</option>
         <option value="South Sinai">جنوب سنياء</option>
         <option value=" Suez">سويس</option>
-      </select><label class="field-label">العنوان</label><input type="text" class="text-field w-input" maxlength="256" name="field-4" data-name="Field 4" placeholder="العنوان بالتفاصيل" id="field-4" required="">
-      <div class="div-block"><label>طريقة الدفع</label><label class="w-radio"><input type="radio" data-name="Radio" id="radio" name="radio" value="Radio" class="w-form-formradioinput radio-button w-radio-input"><span class="w-form-label">الدفع عند الإستلام</span></label><label class="w-radio"><input type="radio" data-name="Radio" id="radio-2" name="Radio" value="Radio 2" class="w-form-formradioinput radio-button-2 w-radio-input"><span class="w-form-label">Credit/Debit card</span></label></div><input type="submit" value="اتمام الطلب" data-wait="Please wait..." class="submit-button w-button">
+      </select>
+      <input type="text" class="text-field w-input" maxlength="256" name="field-4" data-name="Field 4" placeholder="العنوان بالتفاصيل" id="address" required="">
+      <div class="div-block">
+        <label class="field-label-7">طريقة الدفع</label>
+        <label class="w-radio">
+          <input type="radio" data-name="Radio" id="radio" name="radio" value="دفع عند الاستلام" required="" class="w-form-formradioinput radio-button w-radio-input">
+          <span class="w-form-label">الدفع عند الإستلام</span>
+        </label>
+          <label class="w-radio">
+            <input type="radio" data-name="Radio" id="radio-2" name="radio" value="credit/debit" required="" class="w-form-formradioinput radio-button-2 w-radio-input">
+            <span class="w-form-label">Credit/Debit card</span>
+          </label>
+          </div><input type="submit" value="اتمام الطلب" data-wait="Please wait..." class="submit-button w-button">
     </form>
     <div class="success-message w-form-done">
       <div class="div-block-2">
-        <div class="text-block">شكرا لك!!<br>لقد تم الطلب بنجاح</div><img src="images/success.svg" loading="lazy" width="200" height="200" alt="success image" class="image">
+        <div class="div-block-4">
+          <div class="text-block-3">الأسم</div>
+          <div class="text-block-4">email</div>
+          <div class="text-block-5">رقم الهاتف</div>
+          <div class="text-block-6">البلد</div>
+          <div class="text-block-7">المحافظة</div>
+          <div class="text-block-8">العنوان</div>
+          <div class="text-block-9">طريقة الدفع</div>
+          <a href="#" id="conform" class="button w-button">تأكيد</a>
+          <a href="#" id="edit" class="button-2 w-button">تعديل</a>
+        </div>
+        <div class="div-block-3">
+          <div class="text-block">شكرا لك!!<br>لقد تم الطلب بنجاح</div><img src="images/success.svg" loading="lazy" width="150" height="200" alt="success image" class="image">
+        </div>
       </div>
     </div>
-    <div class="error-message w-form-fail">
+    <div class="error-message w-form-fail"  id="err_msg">
       <div class="text-block-2">الرجاء تصحيح الخطأ</div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=610ef3c65b03392322fc52ab" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
+  <script src="js/checkout_script.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
