--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -37,7 +37,7 @@
       <h4 class="heading-9">اجمالي: 150 LE</h4>
     </div>
     <div class="div-block-4">
-      <a href="#" id="submit" class="button-9 w-button">متابعة</a>
+      <a href="/checkout" id="submit" class="button-9 w-button">متابعة</a>
     </div>
   </div>
   <div style="display:none" class="div-block-7">
