--- a/public/checkout/index.html
+++ b/public/checkout/index.html
@@ -79,7 +79,12 @@
           <div class="text-block-6">البلد</div>
           <div class="text-block-7">المحافظة</div>
           <div class="text-block-8">العنوان</div>
-          <div class="text-block-9">طريقة الدفع</div>
+          <div class="text-block-9">الشحن</div>
+          <div class="text-block-10">طريقة الدفع</div>
+          
+          <div class="div-block-5">
+            <h4 class="heading-9">الاجمالي: 150 جنيه</h4>
+          </div>
           <a href="#" id="conform" class="button w-button">تأكيد</a>
           <a href="#" id="edit" class="button-2 w-button">تعديل</a>
         </div>
