--- a/public/checkout/index.html
+++ b/public/checkout/index.html
@@ -57,6 +57,7 @@
         <option value="South Sinai">جنوب سنياء</option>
         <option value=" Suez">سويس</option>
       </select>
+      <input type="text" class="text-field w-input" maxlength="256" name="field-4" data-name="Field 5" pattern="^[0-9]{5}$" placeholder="الرمز البريدي" id="postal_code" required="">
       <input type="text" class="text-field w-input" maxlength="256" name="field-4" data-name="Field 4" placeholder="العنوان بالتفاصيل" id="address" required="">
       <div class="div-block">
         <label class="field-label-7">طريقة الدفع</label>
@@ -79,6 +80,7 @@
           <div class="text-block-6">البلد</div>
           <div class="text-block-7">المحافظة</div>
           <div class="text-block-8">العنوان</div>
+          <div class="text-block-11">الرمز البريدي</div>
           <div class="text-block-9">الشحن</div>
           <div class="text-block-10">طريقة الدفع</div>
           
