--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -34,14 +34,14 @@
       </ul>
     </div>
     <div>
-      <h4 class="heading-9">اجمالي: 150 LE</h4>
+      <h4 class="heading-9">اجمالي:0</h4>
     </div>
     <div class="div-block-4">
-      <a href="/checkout" id="submit" class="button-9 w-button">متابعة</a>
+      <a href="#" id="submit" class="button-9 w-button">متابعة</a>
     </div>
   </div>
   <div style="display:none" class="div-block-7">
-    <h1 class="heading-10">عربة التسوف فارغة</h1><img src="images/7855013_shopping_commerce_e_cart_purchase_icon.svg" loading="lazy" alt="">
+    <h1 class="heading-10">عربة التسوق فارغة</h1><img src="images/7855013_shopping_commerce_e_cart_purchase_icon.svg" loading="lazy" alt="">
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61028f51638efd4154afe3df" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/script.js" type="text/javascript"></script>
